fixed header when on mobile

--- a/jade/assets/stylesheets/style.css
+++ b/jade/assets/stylesheets/style.css
@@ -57,8 +57,18 @@ header.smaller  .blogtitle {
 
 /* fix header for mobile devices */
 @media only screen and (max-width: 720px) {
+
+     header {
+            width: 100%;
+            height: 75px;
+            overflow: hidden;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 999;
+    }
          header  .blogtitle {
-         font-size: 25px;
+         font-size: 26px;
          text-overflow: ellipsis;
            white-space: nowrap;
           overflow: hidden;
